fix: fix style/scrollbar

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -4,11 +4,18 @@
 	position: relative;
 	box-sizing: border-box;
 	height: 100vh;
-	::-webkit-scrollbar { 
-		height: 0;
-		width: 0;
-		color: transparent;
+
+	/* 網頁捲軸【寬度】 */
+	::-webkit-scrollbar {
+		width: 10px;
 	}
+
+	/* 網頁捲軸【把手】顏色 */
+	::-webkit-scrollbar-thumb {
+		background: #dadada;
+		border-radius: 10px;
+	}
+
 	.composables{
     box-sizing: border-box;
 		min-width: 600px;
